[package]
name = "rise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rz-analysis = { path = "../rz/rz_analysis" }
rz-bin = { path = "../rz/rz_bin" }
rz-core = { path = "../rz/rz_core" }
rz-io = { path = "../rz/rz_io" }
